@@ -62,7 +62,7 @@ under the License.
 
   <ciManagement>
     <system>Jenkins</system>
-    <url>https://builds.apache.org/view/S-Z/view/Syncope/</url>
+    <url>https://ci-builds.apache.org./job/Syncope/</url>
   </ciManagement>
 
   <distributionManagement>
@@ -395,7 +395,7 @@ under the License.
     <connid.version>1.5.0.2</connid.version>
     <connid.soap.version>1.4.3</connid.soap.version>
     <connid.rest.version>1.0.5</connid.rest.version>
-    <connid.database.version>2.2.6</connid.database.version>
+    <connid.database.version>2.2.7</connid.database.version>
     <connid.csvdir.version>0.8.8</connid.csvdir.version>
     <connid.ldap.version>1.5.4</connid.ldap.version>
     <connid.ad.version>1.3.6</connid.ad.version>
@@ -404,18 +404,18 @@ under the License.
     <connid.scimv11.version>1.0.1</connid.scimv11.version>
     <connid.servicenow.version>1.0.0</connid.servicenow.version>
 
-    <cxf.version>3.4.2</cxf.version>
+    <cxf.version>3.4.3</cxf.version>
     <bouncycastle.version>1.68</bouncycastle.version>
-    <nimbus-jose-jwt.version>9.7</nimbus-jose-jwt.version>
+    <nimbus-jose-jwt.version>9.9</nimbus-jose-jwt.version>
 
-    <jackson.version>2.12.1</jackson.version>
+    <jackson.version>2.12.3</jackson.version>
 
-    <spring.version>5.3.4</spring.version>
-    <spring-security.version>5.4.5</spring-security.version>
-    <spring-boot.version>2.4.3</spring-boot.version>
-    <spring-cloud-gateway.version>3.0.1</spring-cloud-gateway.version>
+    <spring.version>5.3.5</spring.version>
+    <spring-security.version>5.4.6</spring-security.version>
+    <spring-boot.version>2.4.5</spring-boot.version>
+    <spring-cloud-gateway.version>3.0.2</spring-cloud-gateway.version>
 
-    <openjpa.version>3.1.3-SNAPSHOT</openjpa.version>
+    <openjpa.version>3.2.0-SNAPSHOT</openjpa.version>
     <hikaricp.version>4.0.3</hikaricp.version>
     <bval.version>2.0.5</bval.version>
 
@@ -425,21 +425,21 @@ under the License.
 
     <cocoon.version>3.0.0-alpha-3</cocoon.version>
 
-    <groovy.version>3.0.7</groovy.version>
+    <groovy.version>4.0.0-alpha-3</groovy.version>
 
     <flowable.version>6.6.0</flowable.version>
 
-    <camel.version>3.8.0</camel.version>
+    <camel.version>3.9.0</camel.version>
 
     <slf4j.version>2.0.0-alpha1</slf4j.version>
 
-    <elasticsearch.version>7.11.1</elasticsearch.version>
+    <elasticsearch.version>7.12.1</elasticsearch.version>
 
     <apacheds.version>2.0.0.AM26</apacheds.version>
     <apachedirapi.version>2.0.0</apachedirapi.version>
 
-    <log4j.version>2.14.0</log4j.version>
-    <disruptor.version>3.4.2</disruptor.version>
+    <log4j.version>2.14.1</log4j.version>
+    <disruptor.version>3.4.4</disruptor.version>
     
     <commons-jexl.version>3.1</commons-jexl.version>
     <commons-lang.version>3.12.0</commons-lang.version>
@@ -447,25 +447,25 @@ under the License.
     <commons-codec.version>1.15</commons-codec.version>
     <commons-logging.version>1.1.3</commons-logging.version>
 
-    <modernizer-maven.version>2.1.0</modernizer-maven.version>
+    <modernizer-maven.version>2.2.0</modernizer-maven.version>
 
-    <pac4j.version>4.3.1</pac4j.version>
+    <pac4j.version>5.0.1</pac4j.version>
 
-    <cas.version>6.4.0-RC1</cas.version>
+    <cas.version>6.4.0-SNAPSHOT</cas.version>
     <cas-client.version>3.6.2</cas-client.version>
 
     <h2.version>1.4.200</h2.version>
 
     <junit.version>5.7.1</junit.version>
-    <mockito.version>3.8.0</mockito.version>
+    <mockito.version>3.9.0</mockito.version>
 
-    <swagger-core.version>2.1.7</swagger-core.version>
-    <swagger-ui.version>3.44.0</swagger-ui.version>
+    <swagger-core.version>2.1.8</swagger-core.version>
+    <swagger-ui.version>3.48.0</swagger-ui.version>
 
     <jquery-slimscroll.version>1.3.8</jquery-slimscroll.version>
     <jquery-cookie.version>1.4.1-1</jquery-cookie.version>
 
-    <bootbox.version>5.4.0</bootbox.version>
+    <bootbox.version>5.5.2</bootbox.version>
     <font-awesome.version>5.15.2</font-awesome.version>
     <ionicons.version>2.0.1</ionicons.version>
     <codemirror.version>5.50.0</codemirror.version>
@@ -473,19 +473,20 @@ under the License.
     <jsplumb.version>2.0.7</jsplumb.version>
     <chartjs.version>1.0.2</chartjs.version>
 
-    <wicket.version>9.2.0</wicket.version>
-    <wicket-jqueryui.version>9.2.1</wicket-jqueryui.version>
-    <wicket-bootstrap.version>5.0.3</wicket-bootstrap.version>
+    <wicket.version>9.3.0</wicket.version>
+    <wicketstuff.version>9.3.0</wicketstuff.version>
+    <wicket-jqueryui.version>9.3.1</wicket-jqueryui.version>
+    <wicket-bootstrap.version>5.0.4</wicket-bootstrap.version>
     <wicket-spring-boot.version>3.0.4</wicket-spring-boot.version>
 
     <ianal-maven-plugin-version>1.0-alpha-1</ianal-maven-plugin-version>
 
     <netbeans.version>RELEASE122</netbeans.version>
 
-    <antlr4.version>4.9.1</antlr4.version>
+    <antlr4.version>4.9.2</antlr4.version>
 
     <curator.version>5.1.0</curator.version>
-    <zookeeper.version>3.6.2</zookeeper.version>
+    <zookeeper.version>3.7.0</zookeeper.version>
 
     <testds.port>1389</testds.port>
     <testdb.webport>9082</testdb.webport>
@@ -510,20 +511,20 @@ under the License.
     <cargo.log>${log.directory}/cargo.log</cargo.log>
     <cargo.output>${log.directory}/cargo-output.log</cargo.output>
 
-    <tomcat.version>9.0.43</tomcat.version>
+    <tomcat.version>9.0.45</tomcat.version>
     <wildfly.version>21.0.1.Final</wildfly.version>
-    <payara.version>5.2021.1</payara.version>
+    <payara.version>5.2021.2</payara.version>
     <javax.faces.version>2.3.14</javax.faces.version>
 
     <docker.postgresql.version>13</docker.postgresql.version>
     <docker.mysql.version>8.0</docker.mysql.version>
     <docker.mariadb.version>10.5</docker.mariadb.version>
 
-    <jdbc.postgresql.version>42.2.18</jdbc.postgresql.version>
+    <jdbc.postgresql.version>42.2.19</jdbc.postgresql.version>
     <jdbc.mysql.version>8.0.22</jdbc.mysql.version>
-    <jdbc.mariadb.version>2.7.1</jdbc.mariadb.version>
-    <jdbc.mssql.version>8.4.1.jre</jdbc.mssql.version>
-    <jdbc.oracle.version>19.9.0.0</jdbc.oracle.version>
+    <jdbc.mariadb.version>2.7.2</jdbc.mariadb.version>
+    <jdbc.mssql.version>9.2.1.jre</jdbc.mssql.version>
+    <jdbc.oracle.version>19.10.0.0</jdbc.oracle.version>
 
     <conf.directory>${project.build.directory}/test-classes</conf.directory>
     <bundles.directory>${project.build.directory}/bundles</bundles.directory>
@@ -1160,7 +1161,7 @@ under the License.
       <dependency>
         <groupId>org.apache.tika</groupId>
         <artifactId>tika-core</artifactId>
-        <version>1.25</version>
+        <version>1.26</version>
       </dependency>
 
       <dependency>
@@ -1180,58 +1181,53 @@ under the License.
       </dependency>
 
       <dependency>
-        <groupId>org.codehaus.groovy</groupId>
+        <groupId>org.apache.groovy</groupId>
         <artifactId>groovy</artifactId>
         <version>${groovy.version}</version>
       </dependency>
       <dependency>
-        <groupId>org.codehaus.groovy</groupId>
+        <groupId>org.apache.groovy</groupId>
         <artifactId>groovy-templates</artifactId>
         <version>${groovy.version}</version>
         <exclusions>
           <exclusion>
-            <groupId>org.codehaus.groovy</groupId>
+            <groupId>org.apache.groovy</groupId>
             <artifactId>groovy-xml</artifactId>
           </exclusion>
         </exclusions>
       </dependency>
       <dependency>
-        <groupId>org.codehaus.groovy</groupId>
+        <groupId>org.apache.groovy</groupId>
         <artifactId>groovy-xml</artifactId>
         <version>${groovy.version}</version>
       </dependency>
       <dependency>
-        <groupId>org.codehaus.groovy</groupId>
-        <artifactId>groovy-bsf</artifactId>
-        <version>${groovy.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>org.codehaus.groovy</groupId>
+        <groupId>org.apache.groovy</groupId>
         <artifactId>groovy-jsr223</artifactId>
         <version>${groovy.version}</version>
       </dependency>
       <dependency>
-        <groupId>org.codehaus.groovy</groupId>
+        <groupId>org.apache.groovy</groupId>
         <artifactId>groovy-datetime</artifactId>
         <version>${groovy.version}</version>
       </dependency>
       <dependency>
-        <groupId>org.codehaus.groovy</groupId>
+        <groupId>org.apache.groovy</groupId>
         <artifactId>groovy-dateutil</artifactId>
         <version>${groovy.version}</version>
       </dependency>
       <dependency>
-        <groupId>org.codehaus.groovy</groupId>
+        <groupId>org.apache.groovy</groupId>
         <artifactId>groovy-sql</artifactId>
         <version>${groovy.version}</version>
       </dependency>
       <dependency>
-        <groupId>org.codehaus.groovy</groupId>
+        <groupId>org.apache.groovy</groupId>
         <artifactId>groovy-json</artifactId>
         <version>${groovy.version}</version>
       </dependency>
       <dependency>
-        <groupId>org.codehaus.groovy</groupId>
+        <groupId>org.apache.groovy</groupId>
         <artifactId>groovy-groovysh</artifactId>
         <version>${groovy.version}</version>
       </dependency>
@@ -1278,7 +1274,7 @@ under the License.
       <dependency>
         <groupId>com.icegreen</groupId>
         <artifactId>greenmail</artifactId>
-        <version>1.6.2</version>
+        <version>1.6.3</version>
         <exclusions>
           <exclusion>
             <groupId>junit</groupId>
@@ -1727,7 +1723,16 @@ under the License.
         <artifactId>cas-server-webapp-config</artifactId>
         <version>${cas.version}</version>
       </dependency>
-
+      <dependency>
+        <groupId>org.apereo.cas</groupId>
+        <artifactId>cas-server-support-surrogate-webflow</artifactId>
+        <version>${cas.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.apereo.cas</groupId>
+        <artifactId>cas-server-support-surrogate-api</artifactId>
+        <version>${cas.version}</version>
+      </dependency>
       <dependency>
         <groupId>org.jasig.cas.client</groupId>
         <artifactId>cas-client-core</artifactId>
@@ -1757,6 +1762,11 @@ under the License.
         <groupId>org.apache.wicket</groupId>
         <artifactId>wicket-native-websocket-javax</artifactId>
         <version>${wicket.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.wicketstuff</groupId>
+        <artifactId>wicketstuff-editable-grid</artifactId>
+        <version>${wicketstuff.version}</version>
       </dependency>
       <dependency>
         <groupId>com.googlecode.wicket-jquery-ui</groupId>
@@ -1873,7 +1883,7 @@ under the License.
       <dependency>
         <groupId>org.apache.pdfbox</groupId>
         <artifactId>pdfbox</artifactId>
-        <version>2.0.22</version>
+        <version>3.0.0-RC1</version>
       </dependency>
 
       <dependency>
@@ -2161,6 +2171,17 @@ under the License.
         <enabled>false</enabled>
       </snapshots>
     </repository>
+    <!-- see https://jfrog.com/blog/into-the-sunset-bintray-jcenter-gocenter-and-chartcenter/ -->
+    <repository>
+      <id>uniconiam</id>
+      <url>https://dl.bintray.com/uniconiam/maven</url>
+      <releases>
+        <enabled>false</enabled>
+      </releases>
+      <snapshots>
+        <enabled>false</enabled>
+      </snapshots>
+    </repository>
   </repositories>
 
   <pluginRepositories>
@@ -2415,7 +2436,7 @@ under the License.
             <dependency>
               <groupId>com.puppycrawl.tools</groupId>
               <artifactId>checkstyle</artifactId>
-              <version>8.41</version>
+              <version>8.42</version>
             </dependency>
           </dependencies>
           <configuration>
@@ -2427,7 +2448,7 @@ under the License.
         <plugin>
           <groupId>io.fabric8</groupId>
           <artifactId>docker-maven-plugin</artifactId>
-          <version>0.34.1</version>
+          <version>0.35.0</version>
         </plugin>
 
         <plugin>
@@ -2475,7 +2496,7 @@ under the License.
         <plugin>
           <groupId>org.sonarsource.scanner.maven</groupId>
           <artifactId>sonar-maven-plugin</artifactId>
-          <version>3.8.0.2131</version>
+          <version>3.9.0.2155</version>
         </plugin>
       </plugins>
     </pluginManagement>
@@ -2572,7 +2593,7 @@ under the License.
         <version>1.12.1</version>
         <dependencies>
           <dependency>
-            <groupId>org.codehaus.groovy</groupId>
+            <groupId>org.apache.groovy</groupId>
             <artifactId>groovy-ant</artifactId>
             <version>${groovy.version}</version>
           </dependency>
@@ -2737,7 +2758,7 @@ under the License.
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-project-info-reports-plugin</artifactId>
-        <version>3.1.1</version>
+        <version>3.1.2</version>
         <configuration>
           <dependencyDetailsEnabled>false</dependencyDetailsEnabled>
           <dependencyLocationsEnabled>false</dependencyLocationsEnabled>
@@ -2803,7 +2824,7 @@ under the License.
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-jxr-plugin</artifactId>
-        <version>3.0.0</version>
+        <version>3.1.1</version>
       </plugin>
     </plugins>
   </reporting>
@@ -3038,7 +3059,7 @@ under the License.
       </activation>
 
       <properties>
-        <argLine>-Xms512m -Xmx1024m -Xss256k -Dnet.bytebuddy.experimental=true</argLine>
+        <argLine>-Xms512m -Xmx1024m -Xss256k -Dnet.bytebuddy.experimental=true --add-opens java.base/java.net=ALL-UNNAMED</argLine>
       </properties>
 
       <build>
@@ -3066,7 +3087,7 @@ under the License.
                   <path>
                     <groupId>org.projectlombok</groupId>
                     <artifactId>lombok</artifactId>
-                    <version>1.18.16</version>
+                    <version>1.18.18</version>
                   </path>
                 </annotationProcessorPaths>
               </configuration>
